# text-classifier

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
.github/workflows/: build.yml
app/: config.py  main.py  model.py  schemas.py
k8s/: deployment.yaml  namespace.yaml  service.yaml
tests/: conftest.py  test_api.py  test_model.py
