[project]
name = "text-classifier"
version = "0.1.0"
description = "MLOps InfoJobs - Test"
authors = [
    {name = "Gaston Woollands",email = "g.woollands@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.8.3"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.1.0"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
