[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = "MLOps InfoJobs - Test"
authors = ["Gaston Woollands <g.woollands@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
transformers = ">=4.53.0,<5.0.0"
torch = ">=2.7.1,<3.0.0"
fastapi = {extras = ["standard"], version = ">=0.115.14,<0.116.0"}
pytest = "^8.4.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^4.8.3"
uvicorn = "^0.34.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version = "0.1.0"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"